# PyMusicTerm

./: .gitignore  LICENSE  MANIFEST.in  PyMusicTerm.code-workspace  README.md  pyproject.toml  server.py  ytmusic_cache.sqlite
src/: __main__.py  main.py  pymusicterm.tcss  setting.py
src/api/: downloader.py  local.py  lyrics.py  music_player.py  notification_manager.py  player.py  protocols.py  ytmusic.py
src/api/android/: android.py  termux.py
src/api/discord_rpc/: rich_presence.py
src/api/mpris/: mpris.py
src/api/smtc/: smtc.py
src/api/windows/: notification.py
src/discord_rpc/: rich_presence.py
src/log/: logger.py  logging_config.json
src/player/: media_control.py  mpris.py  player.py  util.py
src/pymusicterm/: __main__.py  main.py  setting.py
src/pymusicterm/api/: downloader.py  local.py  lyrics.py  ytmusic.py
src/pymusicterm/api/mpris/: mpris.py
src/pymusicterm/player/: player.py
tests/: test_downloader.py  test_main.py  test_notification.py  test_player.py  test_settings.py  test_ytmusic.py  util_test.py
