[project]
name = "MusicTerm"
version = "0.0.5"
authors = [{ name = "ZachVFX", email = "zachallrd@gmail.com" }]
description = "play music from your termninal."
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "just-playback>=0.1.8",
    "msgspec>=0.19.0",
    "pydub>=0.25.1",
    "pytubefix>=8.12.1",
    "textual>=1.0.0",
    "tomli-w>=1.2.0",
    "ytmusicapi>=1.10.1",
    "loguru>=0.6.0",
    "humanize>=4.12.1",
    "mpris-server>=0.9.0; sys_platform != 'win32'",
    "notify-py",
    "textual-image[textual]>=0.8.2",
    "pillow>=11.1.0",
    "music-tag>=0.4.3",
    "requests-cache>=1.2.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[project.urls]
Homepage = "https://github.com/ZachVFXX/PyMusicTerm"
Issues = "https://github.com/ZachVFXX/PyMusicTerm/issues"

[tool.uv.sources]
notify-py = { git = "https://github.com/ms7m/notify-py.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
]
