[project]
name = "MusicTerm"
version = "0.1.1"
authors = [{ name = "ZachVFX", email = "zachallrd@gmail.com" }]
description = "play music from your termninal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "just-playback>=0.1.8",
    "msgspec>=0.19.0",
    "pydub>=0.25.1",
    "pytubefix>=8.12.1",
    "textual>=6.1.0",
    "tomli-w>=1.2.0",
    "ytmusicapi>=1.10.1",
    "mpris-server>=0.9.0; sys_platform != 'win32'",
    "textual-image[textual]>=0.8.4",
    "pillow>=11.1.0",
    "music-tag>=0.4.3",
    "requests-cache>=1.2.1",
    "pyinstaller>=6.12.0",
    "winrt-windows-foundation>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-media-playback>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-data-xml-dom>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-ui-notifications>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-media-core>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-media>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-storage>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-storage-streams>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-foundation-collections>=3.2.1; sys_platform == 'win32'",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[project.urls]
Homepage = "https://github.com/ZachVFXX/PyMusicTerm"
Issues = "https://github.com/ZachVFXX/PyMusicTerm/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "textual-dev>=1.7.0",
]


[project.scripts]
pymusicterm = "main:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
